Adiciona melhorias